--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <div class="tabs">
     <button class="tab active" onclick="openTab('home.html')"><i class="fa fa-home" style="font-size: 25px;"></i><br>Home</button>
-    <button class="tab" onclick="openTab('tasks.html')">Tasks</button>
-    <button class="tab" onclick="openTab('boost.html')">Boost</button>
+    <button class="tab" onclick="openTab('tasks.html')"><i class="fa fa-list" style="font-size: 21px;"></i><br>Tasks</button>
+    <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-rocket" style="font-size: 25px;"></i><br>Boost</button>
 </div>
 
 <script src="index.js"></script>
