--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="tabs">
-    <button class="tab active" onclick="openTab('s.html')"><i class="fa fa-home" style="font-size: 25px;"></i><br>Home</button>
+    <button class="tab active" onclick="openTab('home.html')"><i class="fa fa-home" style="font-size: 25px;"></i><br>Home</button>
     <button class="tab" onclick="openTab('task.html')"><i class="fa fa-list" style="font-size: 21px;"></i><br>Tasks</button>
     <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-rocket" style="font-size: 25px;"></i><br>Boost</button>
 </div>
