--- a/boost.html
+++ b/boost.html
@@ -27,7 +27,7 @@
         height: 2px;
         background-color: #fff;
         border-radius: 50%;
-        animation: move 5s infinite linear;
+        animation: move 7s infinite linear; /* увеличить время анимации до 10 секунд */
     }
     
     @keyframes move {
@@ -45,12 +45,12 @@
         let star = document.createElement('div');
         star.className = 'star';
         star.style.top = `${Math.random() * 100}%`;
-        star.style.left = `${Math.random() * 100}%`;
+        star.style.left = `${Math.random() < 0.7? Math.random() * 20 : Math.random() * 80 + 20}%`;
         document.body.appendChild(star);
         setTimeout(() => {
             star.remove();
-        }, 5000); // удалить звезду через 5 секунд
+        }, 7000); // удалить звезду через 10 секунд
     }
     
-    setInterval(createStar, 100); // создавать новую звезду каждые 100 мс
+    setInterval(createStar, 150); // создавать новую звезду каждые 100 мс
     </script>
