--- a/home.html
+++ b/home.html
@@ -17,13 +17,13 @@
 
         </div>
         <div class="right">
-            <button class="header-button" onclick="openTab('settings.html')">
+            <button class="header-button" onclick="openHead('settings.html')">
                 <i class="fa fa-gear" style="color: #fff; font-size: 25px;"></i><br>Misc
             </button>
         </div>
     </div>
     <div class="tab-content">
-        <iframe id="tab-iframe" src="" frameborder="0" width="100%" height="100%"></iframe>
+        <iframe id="header-iframe" src="" frameborder="0" width="100%" height="100%"></iframe>
     </div>    
 </body>
 </html>
