--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div>
-
+            <span class="welcome">Welcome</span>
         </div>
         <div class="right">
             <button class="header-button" onclick="openHead('settings.html')">
