--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         </div>
         <div class="right">
             <button class="header-button" onclick="openHead('settings.html')">
-                <i class="fa fa-gear" style="color: #fff; font-size: 25px;"></i><br>Misc
+                <i class="fa fa-gear" style="color: #fff; font-size: 25px;"></i>
             </button>
         </div>
     </div>
