--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="/index.css">    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/telegram-web-app@latest/disy"></script>
     <title>Abylix</title>
 </head>
 <body>
@@ -21,6 +23,7 @@
     <button class="tab active" onclick="openTab('home.html')"><i class="fa fa-home" style="font-size: 25px;"></i><br>Home</button>
     <button class="tab" onclick="openTab('task.html')"><i class="fa fa-list" style="font-size: 21px;"></i><br>Tasks</button>
     <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-rocket" style="font-size: 25px;"></i><br>Boost</button>
+    <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-dove" style="font-size: 25px;"></i><br>Bird</button>
 </div>
 
 <script src="index.js"></script>
