--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button class="tab active" onclick="openTab('home.html')"><i class="fa fa-home" style="font-size: 25px;"></i><br>Home</button>
     <button class="tab" onclick="openTab('task.html')"><i class="fa fa-list" style="font-size: 21px;"></i><br>Tasks</button>
     <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-rocket" style="font-size: 25px;"></i><br>Boost</button>
-    <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-dove" style="font-size: 25px;"></i><br>Bird</button>
+    <button class="tab" onclick="openTab('event.html')"><i class="fa fa-calendar" style="font-size: 25px;"></i><br>Event</button>
 </div>
 
 <script src="index.js"></script>
