--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/index.css">    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/telegram-web-app@latest/disy"></script>
     <title>Abylix</title>
 </head>
 <body>
@@ -23,7 +22,7 @@
     <button class="tab active" onclick="openTab('home.html')"><i class="fa fa-home" style="font-size: 25px;"></i><br>Home</button>
     <button class="tab" onclick="openTab('task.html')"><i class="fa fa-list" style="font-size: 21px;"></i><br>Tasks</button>
     <button class="tab" onclick="openTab('boost.html')"><i class="fa fa-rocket" style="font-size: 25px;"></i><br>Boost</button>
-    <button class="tab" onclick="openTab('event.html')"><i class="fa fa-calendar" style="font-size: 25px;"></i><br>Event</button>
+    <button class="tab" onclick="openTab('settings.html')"><i class="fa fa-gear" style="font-size: 25px;"></i><br>Misc</button>
 </div>
 
 <script src="index.js"></script>
