--- a/home.html
+++ b/home.html
@@ -16,14 +16,13 @@
         <div>
             <span class="welcome">Welcome</span>
         </div>
-        <div class="right">
-            <button class="header-button" onclick="openHead('settings.html')">
-                <i class="fa fa-gear" style="color: #fff; font-size: 25px;"></i>
-            </button>
-        </div>
     </div>
-    <div class="tab-content">
-        <iframe id="header-iframe" src="" frameborder="0" width="100%" height="100%"></iframe>
-    </div>    
+    <center>
+        <a href="/event1.html">
+            <button class="event">
+                <span><i class="fa fa-calendar"></i> SPACESHIP</span>
+            </button>
+        </a>
+    </center> 
 </body>
 </html>
