--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
     <title></title>
 </head>
 <body>
@@ -43,6 +45,7 @@
     font-size: 16px;
     }
     </style>
+    <span class="welcome">Settings</span>
     <center>
     <button class="misc">
         <span>Сменить язык</span>
