--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <center>
-        <a href="/event1.html">
+        <a href="event1.html">
             <button class="event">
                 <span><i class="fa fa-calendar"></i> SPACESHIP</span>
             </button>
