--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="index.js"></script>
     <script src="/index.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title></title>
 </head>
 <body>
