--- a/task.html
+++ b/task.html
@@ -22,9 +22,10 @@
             <br>
             <div class="boosters">
                 <div class="emoji">
-                    <i class="fa fa-star" style="font-size: 35px; margin: 7px auto;"></i>
+                    <img class="tgme_page_photo_image" style="width: 50px; height: 50px; border-radius: 50%; margin: 2px auto;" src="https://cdn4.cdn-telegram.org/file/gTPQm7Om-IvSkRvtCLztu2SGWkPeoN9u0tSIqzEzHyu0lt8pDGPxC0mSM_H40tjM5sqWxAHl0r1VOzgWOhAF-kf2-X9Ed90P9dwZV3D4hjsDtaHbvTCq0yjWkNEHCPoWTwWl2xPJSAmQIo29noAWxH3Y7_nEmMnLkookcM0l1W2BLZdng0tY-Hav936huJHVz02vkM6w2IeHIYjldtwJF_mGJ-A6iYtcLzsdkbHPGrh-cPODpjCYjUrb35JH6S3HmwXN5wpmrQQ8qNxso1TPMkA3i03UttiYIZeTDx-FWLmT-NdYHwZAv5CMdDhfqpMIuV-lAzOcBBF6iLgVe8V2nA.jpg">
                 </div>
-                <h1 class="text" style="font-size: 15px;">subscribe to community <br> channel</h1>
+                <p style="font-size: 13px;"><b>Subscribe community</b><br><span style="float: left; color: #c3c3c3;">+3000</span></p>
+                <button class="start-claim">Start</button>
             </div>
             <br>
             <div class="boosters">
